further changes to offer